# adhesion-code

./: .editorconfig  .gitignore  CITATION.cff  Dockerfile  Makefile  Pipfile  README.md  adhesion_example.md  appendix.md  convex-conjugate.md  cubic-spline-3d.md  entangled.dhall  entangled.toml  pyproject.toml  python_bindings.md  ref.bib  tutorial.md  unit_tests.md
.entangled/: filedb.json
docs/: index.html
examples/: .gitignore  create_ic.py  hello_world.cc  ic-from-file.yaml
figures/: app-graph.dot
notebooks/: Illustrations.ipynb  Mass function.ipynb  Normalisation.ipynb  Reading_HDF5.ipynb  Untitled.ipynb  cosmology.py
public/: index.html
scripts/: annotate-code-blocks.lua  style.css  tangle.lua
src/: adhesion.hh  boxparam.hh  cgal_base.hh  fft.hh  initial_conditions.hh  main.cc  mesh.hh  mesh_manipulation.hh  plane.hh  power_diagram.hh  run.cc  run.hh  sphere.hh  surface.hh  write_obj.hh  writers.hh
src/adhesion/: constructor.cc  edge_count.cc  get_nodes.cc  get_walls.cc  velocity.cc
src/initial_conditions/: apply_power_spectrum.cc  eisenstein-hu.cc  generate.cc  normalize_power_spectrum.cc  white_noise.cc
src/power_diagram/: edges.cc  faces.cc
src/writers/: h5_node_type.cc  h5_node_type.ih  hdf5-mesh.cc
