[tool.poetry]
name = "adhesion-code"
version = "0.1.0"
description = "Environment to run the tutorial for writing your own IC"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.22.4"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
